# veriphix

./: .gitignore  CITATION.cff  LICENSE  README.md  VBQC_demo.ipynb  base_backend_backup.py  corrected-malicious-noise.csv  demo.py  example.py  example_perceval.py  minimize_space.ipynb  noise_model.py  noise_protocol_analysis-2.csv  noise_protocol_analysis-big.csv  noise_protocol_analysis.csv  pyproject.toml  random_clifford_generation.ipynb  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  ruff.yml  typecheck.yml
demo/: aborted.csv  accepted.csv  bqp-sample.py  corrupted.csv  data-2.csv  data-3.csv  data-4.csv  data-5.csv  demalicious.csv  fix_dataset.py  generate_plots.py  results.csv  sampled_circuits.txt
tests/: qasm_parser.py  test_client.py  test_protocols.py  test_runclass.py  test_vbqc.py  test_verifying.py
tests/test_circuits/: README.md  circuit0.qasm  circuit1.qasm  circuit2.qasm  circuit4.qasm  circuit5.qasm  circuit6.qasm  circuit7.qasm  circuit8.qasm  circuit9.qasm  table.json
veriphix/: __init__.py  blinding.py  brickwork_state_transpiler.py  client.py  dummyless.py  malicious_noise_model.py  perceval_backend.py  protocols.py  qasm_parser.py  run.py  trappifiedCanvas.py  verifying.py
veriphix/sampling_circuits/: __init__.py  brickwork_state_transpiler.py  experiments.py  qasm_parser.py  regenerate_table.py  sampling_circuits.py
