[project]
name = "veriphix"
version = "1"

[tool.setuptools.packages.find]
include = ["veriphix"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "UP",
  "NPY",
  "A",
  "B",
  "W",
  "PLE",
  "PLW",
  "FA",
  "RUF",
  "PERF",
  "TCH",
  "I",
]
ignore = [
  # TODO: Resolve this immediately
  "NPY002", # Use np.random.Generator
  "E74",    # Ambiguous name
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
