[project]
name = "veriphix"
version = "1"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
include = ["veriphix"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "UP",
  "NPY",
  "A",
  "B",
  "W",
  "PLE",
  "PLW",
  "FA",
  "RUF",
  "PERF",
  "TCH",
  "I",
]
ignore = [
  # TODO: Resolve this immediately
  "NPY002", # Use np.random.Generator
  "E74",    # Ambiguous name
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
# Keep in sync with pyright
files = ["veriphix", "tests"]
follow_imports = "silent"
follow_untyped_imports = true # required for qiskit, requires mypy >=1.14
strict = true
mypy_path = "./stubs"

[tool.pyright]
# Keep in sync with mypy
include = ["veriphix", "tests"]
reportUnknownArgumentType = "information"
reportUnknownLambdaType = "information"
reportUnknownMemberType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType = "information"
# reportInvalidTypeVarUse is a warning by default
reportInvalidTypeVarUse = "error"
extraPaths = ["./stubs"]
